--- a/package.json
+++ b/package.json
@@ -6,19 +6,42 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watch --coverage=false --changedSince=origin/master",
+    "testDebug": "jest -o --watch --coverage=false",
+    "testFinal": "jest",
+    "updateSnapshot": "jest -u --coverage=false"
   },
   "dependencies": {
     "expo": "~45.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^45.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/jest": "^28.1.6",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "@types/react-test-renderer": "^17.0.21",
+    "typescript": "~4.3.5"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+        "**/*.{ts,tsx}",
+        "!**/node_modules/**",
+        "!**/coverage/**",
+        "!**/babel.config.js",
+        "!**/jest.setup.js",
+        "!**/metro.config.js"
+    ]
+  }
 }
