--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "jest": "^26.6.3",
-    "jest-expo": "^45.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -25,23 +24,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.5",
+    "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^28.1.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
-    "@types/react-test-renderer": "^17.0.21",
+    "@types/react-test-renderer": "^17.0.2",
+    "babel-preset-expo": "^9.1.0",
+    "jest-expo": "^45.0.1",
     "typescript": "~4.3.5"
   },
-  "private": true,
-  "jest": {
-    "preset": "jest-expo",
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-        "**/*.{ts,tsx}",
-        "!**/node_modules/**",
-        "!**/coverage/**",
-        "!**/babel.config.js",
-        "!**/jest.setup.js",
-        "!**/metro.config.js"
-    ]
-  }
+  "private": true
 }
