--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "updateSnapshot": "jest -u --coverage=false"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "expo": "~45.0.0",
+    "expo-auth-session": "~3.6.1",
+    "expo-font": "~10.1.0",
+    "expo-random": "~12.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "jest": "^26.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -30,8 +35,13 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "@types/react-test-renderer": "^17.0.2",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
     "babel-preset-expo": "^9.1.0",
     "jest-expo": "^45.0.1",
+    "jest-styled-components": "^7.0.8",
+    "react-hooks-testing-library": "^0.6.0",
+    "ts-jest": "^27.1.5",
     "typescript": "~4.3.5"
   },
   "private": true
